# todo-web

./: .env.example  .gitignore  Dockerfile  README.md  README_ES.md  db_setup.bat  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt  start.py
todo/: __init__.py  create_db.sql  forms.py  models.py  routes.py
todo/templates/: index.html  layout.html  login.html  register.html
